pxc/tests/test_002_type/memtmpl2.px
public namespace memtmpl2;
import common -;
import meta m;

struct foo {
  function {t} t mul(t x) {
    return x * x;
  }
}

function void t1()
{
  foo f;
  // int x = f.mul(3);
  int x = m::symbol{foo, "mul"}(3); // error: foo::mul is not accessible
  println(x);
}

t1();

